Phase 3: JMH single-name benchmark — NameParserRust(JSON) vs NameParserImpl
Standalone bindings/java/jmh Maven module (own pom.xml, --release 22, shaded to
target/benchmarks.jar with Main-Class org.openjdk.jmh.Main). ParseBench loads the
first 2,000 names of testdata/benchmark-data.txt into a String[] and runs two
@Benchmark methods over the whole sample per op (javaImpl -> NameParserImpl,
rustJson -> NameParserRust's FFM/JSON path), AverageTime mode, 5x1s warmup,
5x1s measurement, 2 forks.

Result (results-jmh.json, this machine): javaImpl 25551.5 +/- 138.6 us/op
(12.776 us/name), rustJson 20934.2 +/- 218.1 us/op (10.467 us/name) -- a 1.22x
speedup. Below the design's >=2x target and its ~2-2.5x in-process model: the
JSON/Gson marshalling overhead the design flagged as a risk eats most of the
Rust core's raw parsing advantage. This is the empirical input Task 6 needs to
decide the flat-struct wire format question, not a build-blocking assertion.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NRAeUtmwoADvii1rr9jjBt